--- a/docker-copmose.yml
+++ b/docker-copmose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - '3306:3306'
     volumes:
-      - ./schema:/docker-entrypoint-initdb.d
+      - ./resources:/docker-entrypoint-initdb.d
     environment:
       - MYSQL_RANDOM_ROOT_PASSWORD=yes
       - MYSQL_DATABASE=app
